 * Extended Index Queue for initial support for scheduling any job

2009-06-29 tdb
 * Added UUID metafield type

2009-07-01 tdb
 * Fixed cloning of eprints/documents/files

2009-07-24 tdb
 * Added support for a "captcha" field to user registration
 * Allow NewEPrint screen to be used in the key_tools area

2009-07-27 tdb
 * Added "show_help" option to workflow component to disable collapsing

2009-07-29 tdb
 * Added dynamic javascript and CSS based on user logged in status

2009-08-11 tdb
 * Return NOT_FOUND if a request for a secure document doesn't exist

2009-08-12 tdb
 * Use "brief" citation to render title duplicate matches >5

2009-08-17 cjg
 * Added $session->get_conf() to improve readability of code.

2009-09-16 tdb
 * Fixed current_counter not being available to Oracle
 * Fixed erroneous attempt to set increment=0 in counter_minimum
 * Modified Import UI to allow a per-plugin/single/bulk workflow

2009-09-29 cjg
 * EPrints.pm methods for API.

2009-09-29 cjg
 * First half of Repository methods for API. Not yet merged Repository & Session.

2009-09-29 cjg
 * $eprints->repository now obeys disable option.

2009-09-30 tdb
 * More efficient methods for getting "owned" and "editable" eprints

2009-10-13 tdb
 * Replaced search code with search code v3 (pure SQL)

2009-10-21 tdb
 * Refined UploadMethods so they can specify a position to appear at

2009-10-21 cjg
 * Minor tweak to XML::GDOME to work with the new XML set up.

2009-10-21 cjg
 * Merged Session & Repository. Repository is now a subclass of 
    RepositoryConfig. RepositoryConfig can be used where no db connection etc.
    is possible. More work to do on this, but works!

2009-10-21 cjg
 * (re)Added caching for Repository configuration when running under mod_perl
 * Added function to check hash paramters passed to a function, set defaults
    if undef, and warn if unexpeted paramters were passed.
 * Merged RepositoryConfig into Repository.
 * Moved old Session functions into BackCompatability